fix: workflow file.

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,10 +3,7 @@ name: Android Dynamic Library
 on:
   push:
     branches:
-      - main
-
-  # test
-  workflow_dispatch:
+      - master
 
 env:
   LIB_NAME: 'libedgetts'
