--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,7 +19,29 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: android
+          profile: minimal
+          target: aarch64-linux-android
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          target: x86_64-linux-android
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          target: armv7-linux-android
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          target: i686-linux-android
 
       - name: Install Android NDK
         uses: nttld/setup-ndk@v1
