--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,7 +26,7 @@ jobs:
           toolchain: stable
           override: true
           profile: minimal
-          targets: 'aarch64-linux-android, armv7-linux-androideabi, i686-linux-android, x86_64-linux-android'
+          target: 'aarch64-linux-android, armv7-linux-androideabi, i686-linux-android, x86_64-linux-android'
 
       - name: Install Android NDK
         uses: nttld/setup-ndk@v1
