--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,6 +12,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libssl-dev
+
       - name: Checkout code
         uses: actions/checkout@v2
 
