--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libssl-dev
+          export OPENSSL_DIR=/usr/lib/ssl
 
       - name: Checkout code
         uses: actions/checkout@v2
